--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,7 @@ body {
 h1 {
  font-size: 60px; 
  z-index: 1;
+ font-weight: normal;
 }
 
 h2 {
@@ -53,6 +54,13 @@ p {
  background: $green;
  padding: 23px 40px;
  text-align: center;
+ &:hover { 
+  background: #5eaa2f;  
+ }
+ &:active {
+  background: #5eaa30 ; 
+  color: #8fc46e ;
+ }
 }
 
 .headerlist {
@@ -87,6 +95,12 @@ p {
   text-transform: uppercase; 
   color: #fff;
   font-size: 20px; 
+  &:hover {
+   color:  #c1ddb1; 
+  }
+  &:active {
+   color: #94c478; 
+  }
  }
 }
 
@@ -95,7 +109,7 @@ p {
 }
 .prograselect__text {
  margin-left: 6.8% ;  
- margin-top: 120px;;
+ margin-top: 30px;;
  display: flex;
  flex-direction: column;
  span { 
@@ -231,4 +245,69 @@ p {
 .description__paragraph {
  word-wrap: wrap;;  
  padding-top: 70px;
+}
+
+.resultlist {
+ display: flex;
+ flex-direction: row; 
+}
+
+.resultlist__item {
+ flex-basis: 37.6%;
+ margin-top: 70px; 
+ padding: 13px 24px;
+ border: 2px solid #cdcdcd ;
+ border-radius: 3px;
+ &:first-child {
+  margin-right: 40px;; 
+ }
+ h3 {
+  text-transform: uppercase; 
+  text-align: center;
+  font-size: 30px;
+  line-height: 37px;
+ }
+ span  {
+  display: block;
+  text-align: center;
+  color: #444;
+  font-size: 14px;
+  background: #f2f2f2;
+  position: relative;
+  bottom: -20px;
+ }
+}
+
+
+.example__cost {
+ margin-top: 65px; 
+ display: flex;
+ flex-direction: row; 
+ span { 
+  flex-basis: 37.6%; 
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #111111;
+  line-height: 20px; 
+  text-align: center;
+  &:last-child {
+   font-weight: bold;  
+   margin-left: 80px;
+  }
+ } 
+
+}
+
+.example__examplelist {
+ display: flex;
+ flex-direction: row; 
+}
+
+.catitem  { 
+  margin-left: 40px;;
+}
+input[type=range] {
+ display: block; 
+ width: 433px;; 
+ margin: 0 auto;
 }
